--- a/styles/game.css
+++ b/styles/game.css
@@ -61,7 +61,7 @@ canvas {
     width: 100%;
     height: 100%;
     aspect-ratio: 16/9;
-    border: 2px solid var(--bg-neutral); /* ! ggfls border raus */
+    border: 2px solid var(--bg-neutral);
     border-radius: 1rem;
     background-color: var(--bg-base-200);
 }
