--- a/styles/article.css
+++ b/styles/article.css
@@ -75,7 +75,19 @@ section {
 .contact-section {
     display: flex;
     flex-direction: column;
-    gap: unset;
+    gap: 0.5rem;
+}
+
+.contact-item {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.contact-item svg {
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: hsla(210, 1%, 67%, 0.7);
 }
 
 ul {
@@ -83,7 +95,7 @@ ul {
     flex-direction: column;
     gap: 0.5rem;
     list-style-position: inside;
-    color: hsla(210, 1%, 67%, 70%);
+    color: hsla(210, 1%, 67%, 0.7);
 }
 
 li {
